--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Counter</title>
-  <link src="app.css" rel="stylesheet" type="text/css"/>
+  <link href="app.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
   <h1>Counter</h1>
@@ -12,5 +12,6 @@
     <button id="reset">Reset</button>
     <button id="increase">Increase</button>
   </div>
+  <script src="script.js"></script>
 </body>
 </html>
